grammar.bnf
<program> ::= <statement-list>


<statement-list> ::= <statement>
                    | <statement> <statement-list>


<statement> ::= <declaration>
              | <assignment>
              | <print-statement>
              | <if-statement>
              | <while-statement>
              | <for-statement>



<declaration> ::= <type> <identifier> ";"
                | <type> <identifier> "=" <expression> ";"


<type> ::= "পুরা" | "pura"
          | "ভাঙ্গা" | "bhanga"


<assignment> ::= <identifier> "=" <expression> ";"


<print-statement> ::= "দেখাও" "(" <expression> ")" ";"
                    | "dekhaw" "(" <expression> ")" ";"


<if-statement> ::= "জুদি" "(" <condition> ")" "{"
                       <statement-list>
                   "}"
                 | "জুদি" "(" <condition> ")" "{"
                       <statement-list>
                   "}" "নাইলে" "{"
                       <statement-list>
                   "}"
                 | "zudi" "(" <condition> ")" "{"
                       <statement-list>
                   "}"
                 | "zudi" "(" <condition> ")" "{"
                       <statement-list>
                   "}" "naile" "{"
                       <statement-list>
                   "}"


<while-statement> ::= "জতক্ষণ" "(" <condition> ")" "{"
                          <statement-list>
                      "}"
                    | "zotokhon" "(" <condition> ")" "{"
                          <statement-list>
                      "}"


<for-statement> ::= "জতবার" "(" <for-init> <condition> ";" <for-update> ")" "{"
                        <statement-list>
                    "}"
                  | "যতবার" "(" <for-init> <condition> ";" <for-update> ")" "{"
                        <statement-list>
                    "}"
                  | "zotobar" "(" <for-init> <condition> ";" <for-update> ")" "{"
                        <statement-list>
                    "}"
                  | "for" "(" <for-init> <condition> ";" <for-update> ")" "{"
                        <statement-list>
                    "}"


<for-init> ::= ";"
             | <declaration>
             | <assignment>


<for-update> ::= <identifier> "=" <expression>
               | <expression>
               | ε


<condition> ::= <expression>


<expression> ::= <logical-or>


<logical-or> ::= <logical-and>
               | <logical-or> "অথবা" <logical-and>
               | <logical-or> "othoba" <logical-and>


<logical-and> ::= <comparison>
                | <logical-and> "এবং" <comparison>
                | <logical-and> "ebong" <comparison>


<comparison> ::= <additive>
               | <additive> <comparison-op> <additive>


<comparison-op> ::= "=="
                  | "!="
                  | "<"
                  | ">"
                  | "<="
                  | ">="


<additive> ::= <term>
             | <additive> "+" <term>
             | <additive> "-" <term>


<term> ::= <factor>
         | <term> "*" <factor>
         | <term> "/" <factor>


<factor> ::= <number>
           | <identifier>
           | "-" <factor>
           | "+" <factor>
           | "(" <expression> ")"


<number> ::= <integer>
           | <decimal>


<integer> ::= <digit>
            | <digit> <integer>


<decimal> ::= <integer> "." <integer>


<identifier> ::= <letter>
               | <identifier> <letter>
               | <identifier> <digit>
               | <identifier> "_"


<letter> ::= "a" | "b" | "c" | "d" | "e" | "f" | "g"
           | "h" | "i" | "j" | "k" | "l" | "m" | "n"
           | "o" | "p" | "q" | "r" | "s" | "t" | "u"
           | "v" | "w" | "x" | "y" | "z"
           | "A" | "B" | "C" | "D" | "E" | "F" | "G"
           | "H" | "I" | "J" | "K" | "L" | "M" | "N"
           | "O" | "P" | "Q" | "R" | "S" | "T" | "U"
           | "V" | "W" | "X" | "Y" | "Z"
           | <bengali-letter>


<bengali-letter> ::= "অ" | "আ" | "ই" | "ঈ" | "উ" | "ঊ" | "ঋ" | "এ" | "ঐ" | "ও" | "ঔ"
                   | "ক" | "খ" | "গ" | "ঘ" | "ঙ" | "চ" | "ছ" | "জ" | "ঝ" | "ঞ"
                   | "ট" | "ঠ" | "ড" | "ঢ" | "ণ" | "ত" | "থ" | "দ" | "ধ" | "ন"
                   | "প" | "ফ" | "ব" | "ভ" | "ম" | "য" | "র" | "ল" | "শ" | "ষ"
                   | "স" | "হ" | "ড়" | "ঢ়" | "য়"


<digit> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
          | "০" | "১" | "২" | "৩" | "৪" | "৫" | "৬" | "৭" | "৮" | "৯"
